<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:background="@color/colorCommon10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:background="@drawable/delete_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setting_dialog_delete_title"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor = "@color/colorGray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/setting_dialog_delete_description"
            android:textSize="16dp"
            android:textAlignment="center"
            android:textColor = "@color/colorGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.2"
            android:background="@color/colorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_delete_dialog_yes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/setting_dialog_delete_yes"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor = "@color/colorGray"
                android:background="@drawable/image_selector" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/textView_delete_dialog_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:text="@string/setting_dialog_delete_no"
                android:textSize="16dp"
                android:textAlignment="center"
                android:textColor = "@color/colorGray"
                android:background="@drawable/image_selector" />


        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>